fix(llm): address PR #197 code review findings (B15/MA13/MA7/MA8/C3/MA9/MA10/MA12/MA11)
- B15 [BLOCKER/security]: JvmCredentialStore.retrieve() no longer falls back to
  STELEKIT_GIT_TOKEN for arbitrary keys — the env-var fallback now only fires
  for keys matching the git-sync "git_https_token_<id>" prefix, preventing a
  git PAT from leaking to LLM providers as a Bearer token.
- MA13 [MAJOR]: storeBlocking() is now overridden explicitly instead of relying
  on the default interface delegation to store() — saveProperties() returns
  Boolean so a failed disk write is observable and storeBlocking() returns false.
- MA7/MA8 [MAJOR]: LlmCredentialMigration now logs each step's start/success/
  failure (provider IDs only, never credential values), modeled on
  UuidMigration's pattern. migrateKey() now calls clearPlaintext() (idempotent)
  even when the new store already has the key, fixing the "crashed after write,
  before clear" case that previously stranded plaintext forever.
- C3 [CRITICAL]: GraphWriterPort.savePage now returns Either<DomainError, Unit>
  reflecting GraphWriter.savePageInternal's actual success/failure instead of
  always reporting success. LlmSuggestionWriter.materializeAndWrite propagates
  write failures so StelekitViewModel's existing onLeft { sendSnackbar } fires.
  Updated all implementers/callers: GraphWriter, BacklinkRenamer, and every
  test fake implementing GraphWriterPort.
- MA9 [MAJOR]: added StelekitViewModelLlmSuggestionTest coverage for both a
  successful accept (no error snackbar) and a failing accept (snackbar fires,
  optimistic pre-write removal ordering preserved per ADR-012).
- MA10 [MAJOR]: extracted GenAiException.errorCode handling in
  MlKitLlmFormatterProvider.format() into a pure, SDK-independent
  mapGenAiErrorCode() (voice/GenAiErrorMapping.kt), mirroring
  mapMlKitFeatureStatus()'s shape, with table-driven tests.
- MA12 [MAJOR]: added LlmSuggestionWriterTest coverage locking in the documented
  behavior that a failed 